# home-cloud

./: .gitignore  README.md  install.sh  pyproject.toml
homecloud/: __init__.py  __main__.py  app.py  config.py  constants.py
homecloud/services/: __init__.py
homecloud/steps/: __init__.py  base.py  coturn.py  docker.py  duckdns.py  hardening.py  immich.py  nextcloud_aio.py  restic_s3.py  samba.py  ssd.py  tailscale.py  telegram_bot.py  wifi.py
homecloud/ui/: __init__.py  config_screen.py  confirm.py  install_screen.py  main_menu.py  repair_screen.py  status_screen.py  uninstall_screen.py  update_screen.py
homecloud/utils/: __init__.py  state.py
templates/: 99-data.rules  99-ncdata.rules  README.md  data-replug.service  docker-wait-for-ssd.conf  homecloud-bot.service  homecloud-replug.sh  ncbot.service  ncdata-replug.service  smb.conf.snippet
templates/immich/: docker-compose.yml.j2  env.j2
