[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homecloud"
version = "0.1.0"
description = "Interactive installer & manager for a Raspberry Pi 5 home cloud (Immich + S3 Glacier backup + Telegram bot)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "omidizadi" }]
dependencies = [
    "rich>=13.7.0",
    "jinja2>=3.1.3",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
bot = [
    "python-telegram-bot>=21.0",
    "APScheduler>=3.10.4",
    "requests>=2.31.0",
]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
]

[project.scripts]
homecloud = "homecloud.__main__:main"

[tool.setuptools.packages.find]
include = ["homecloud*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]
